--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,17 @@
 
 # mac产生的dsstore
 .DS_Store
-/.history
-.jar
+
+*.history
+
+# Compiled class file
+*.class
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
